    - javascript in these tags will be deferred loaded.
  - CHANGE: Fix lib/nls files so that UTF-8 locales are searched first.
  - FEATURE: cms_admin_utils::get_icon() and {admin_icon} can now find icons without specifying an extension.
  - SECURITY: checksum verification can no longer fish for files outside of the root directory.
  - Improvement to contentoperations::SetDefaultContent()
  - improve input checking to cms_ipmatches.
  - FEATURE: Adds the cmsfile: smarty resource which is similar to the file resource but more restrictive
     (templates must exist BELOW one of the allowed template directories).  This resource also supports the ;top ;head and ;body
     suffixes to allow parsing a subset of the template.
  - FEATURE: The cmsfile: resource is now the default resource (instead of file:)
  - FEATURE: Now allow loading a page template directly from a smarty resource.
  - FEATURE: Adds new config entry $config['page_template_list'] to allow manually creating a page template list of smarty
      resources:. When enabled, and adding or editing content no design selection is possible, and this list will be displayed.
      Note: when using this, implementing {cms_stylesheet} in the file based templates will be problematic.
  - IMPROVE: Organize and refactor the template parsing code.
  - FEATURE: Added the ability to stop processing content, via an exception.  This is useful in situations where output is retrieved from a cache.
  - FEATURE: Added the {content_text} plugin to alloa adding simple static text instructions for editors on the edit content page.
      text must be hardcoded.  i.e {content_text text='This is a test'}
  - FEATURE: Added the {assets_url} plugin to provide the complete URL to the assets folder.
  - FEATURE: New cleaned up simplex theme on initial install demonstrates template inheritance and other techniques
  - FEATURE: New default content on initial install